--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
           <p class="mega push-0 max-length not-centered">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
+      </div>
     </div>
 
     <div>
@@ -50,6 +51,7 @@
             <div class="gutter-1-4" id="grassy-shrubs">
               <h1 class="mega push-0">Grassy shrubs</h1>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
+            </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub 2.jpg">
@@ -123,6 +125,7 @@
           </li>
         </ol>
       </div>
+    </div>
 
     <div class="contact pad-t pad-b">
       <div class="wrapper">
@@ -153,6 +156,7 @@
         </form>
       </div>
     </div>
+  </div>
 
   <div class="footer pad-t-1-2 pad-b-1-2">
     <div class="wrapper gutter-1-2">
