Add a small change to the code

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </div>
     </div>
 
-    <div class="contact pad-t pad-b" id="contact" tabindex="0">
+    <div class="contact pad-t pad-b" id="contact" tabindex="0" role="search">
       <div class="wrapper">
         <h1 class="push-0 color-brand-dark gutter-1-2">Contact</h1>
         <p class="mega max-length not-centered gutter-1-2">We want… a shrubbery!</p>
