--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-ca">
 <head>
-  <title>Things and stuff and junk</title>
+  <meta charset="utf-8">
+  <title>Shrubbery</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -15,11 +16,11 @@
     <li><a href="#nav">Jump to navigation</a></li>
   </ul>
 
-  <div class="masthead" role="banner">
+  <header class="masthead" role="banner">
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
       <h1 class="push-0">Shrubbery, etc.</h1>
     </div>
-    <div class="nav" id="nav" tabindex="0">
+    <nav class="nav" id="nav" tabindex="0" role="navigation">
       <div class="wrapper gutter-1-2">
         <ol class="mega list-group-inline push-0">
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#about">About</a></li>
@@ -27,128 +28,133 @@
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#prices">Prices</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#news">News</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#contact">Contact</a></li>
+        </ol>
       </div>
-    </div>
-  </div>
+    </nav>
+  </header>
 
-  <div role="main" id="main" tabindex="0">
-    <div class="about push" id="about" tabindex="0">
+  <main role="main" id="main" tabindex="0">
+    <section class="about push" id="about" tabindex="0">
       <div class="embed embed-24by10">
         <img class="embed-item" aria-details="shrubs" src="images/shrubs.jpg" alt="">
       </div>
       <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
-          <h1 class="push-0">About</h1>
+          <h2 class="push-0">About</h2>
           <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
           <p class="mega push-0 max-length not-centered">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div id="shrubs" tabindex="0">
+    <section id="shrubs" tabindex="0">
       <div class="wrapper gutter-1-2">
-        <h1 class="push-0 color-brand-dark">Products</h1>
+        <h2 class="push-0 color-brand-dark">Products</h2>
         <p class="mega max-length not-centered">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" aria-details="#grassy-shrubs" src="images/shrub-1.jpg">
+            <img class="img-flex push" aria-details="#grassy-shrubs" src="images/shrub-1.jpg" alt="">
             <div class="gutter-1-4 pad-b" id="grassy-shrubs">
-              <h1 class="mega push-0">Grassy shrubs</h1>
+              <h3 class="mega push-0">Grassy shrubs</h3>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" aria-details="#shrubs-with-laurels" src="images/shrub-2.jpg">
+            <img class="img-flex push" aria-details="#shrubs-with-laurels" src="images/shrub-2.jpg" alt="">
             <div class="gutter-1-4 pad-b" id="shrubs-with-laurels">
-              <h1 class="mega push-0">Shrubs with laurels</h1>
+              <h3 class="mega push-0">Shrubs with laurels</h3>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" aria-details="#two-level-shrub" src="images/shrub-3.jpg">
+            <img class="img-flex push" aria-details="#two-level-shrub" src="images/shrub-3.jpg" alt="">
             <div class="gutter-1-4 pad-b" id="two-level-shrub">
-              <h1 class="mega push-0">Two-level shrubbery</h1>
+              <h3 class="mega push-0">Two-level shrubbery</h3>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
             </div>
           </li>
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div class="prices pad-t pad-b" id="prices" tabindex="0">
+    <section class="prices pad-t pad-b" id="prices" tabindex="0">
       <div class="wrapper gutter-1-2">
-        <h1 class="push-0 color-brand-dark">Prices</h1>
+        <h2 class="push-0 color-brand-dark">Prices</h2>
         <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
-        <small class="rando italic pad-t pad-b gutter-1-4">Prices for small, medium and large shrubberies.</small>
 
         <table>
-          <tr>
-            <td>&nbsp;</td>
-            <td class="bold">Small</td>
-            <td class="bold">Medium</td>
-            <td class="bold">Large</td>
-          </tr>
-          <tr>
-            <td class="bold">Grassy shrubs</td>
-            <td>$10</td>
-            <td>$20</td>
-            <td>$30</td>
-          </tr>
-          <tr>
-            <td class="bold">Shrubs with laurels</td>
-            <td>$40</td>
-            <td>$70</td>
-            <td>$100</td>
-          </tr>
-          <tr>
-            <td class="bold">Two-level shrubbery</td>
-            <td>$50</td>
-            <td>$70</td>
-            <td>$90</td>
-          </tr>
+          <caption class="rando italic pad-t pad-b gutter-1-4">Prices for small, medium and large shrubberies.</caption>
+          <thead>
+            <tr>
+              <th scope="col">&nbsp;</th>
+              <th class="bold" scope="col">Small</th>
+              <th class="bold" scope="col">Medium</th>
+              <th class="bold" scope="col">Large</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th class="bold" scope="row">Grassy shrubs</th>
+              <td>$10</td>
+              <td>$20</td>
+              <td>$30</td>
+            </tr>
+            <tr>
+              <th class="bold" scope="row">Shrubs with laurels</th>
+              <td>$40</td>
+              <td>$70</td>
+              <td>$100</td>
+            </tr>
+            <tr>
+              <th class="bold" scope="row">Two-level shrubbery</th>
+              <td>$50</td>
+              <td>$70</td>
+              <td>$90</td>
+            </tr>
+          </tbody>
         </table>
       </div>
-    </div>
+    </section>
 
-    <div class="news pad-t pad-b" id="news" tabindex="0">
+    <section class="news pad-t pad-b" id="news" tabindex="0">
       <div class="wrapper gutter-1-2">
-        <h1 class="push-0 color-brand-dark">News</h1>
+        <h2 class="push-0 color-brand-dark">News</h2>
         <p class="mega max-length not-centered">Then, when you have found the shrubbery, you must cut down the mightiest tree in the forest… with… a herring!</p>
 
         <ol class="list-group">
           <li class="push">
-            <h3 class="under push-0"><a href="#">What makes a good shrubbery?</a></h3>
-            <p class="push-0">A quick checklist for determining if a shrub is worthy of knighthood. <a class="under" href="#" aria-label="Read more about of what makes a good shrubbery">Read&nbsp;more…</a></p>
+            <h3 class="under push-0"><a href="https://www.thespruce.com/best-shrubs-for-hedges-4151139" aria-label="Read more about of what makes a good shrubbery">What makes a good shrubbery?</a></h3>
+            <p class="push-0">A quick checklist for determining if a shrub is worthy of knighthood. <a class="under" href="https://www.thespruce.com/best-shrubs-for-hedges-4151139" aria-label="Read more about of what makes a good shrubbery">Read more…</a></p>
           </li>
           <li class="push">
-            <h3 class="under push-0"><a href="#">Shrubbery recycling</a></h3>
-            <p class="push-0">I will come pick up your shrub and recycle it. Though why you’d want to get rid of a shrubbery I do not know. <a class="under" href="#" aria-label="Read more about Shrubbery recycling">Read&nbsp;more…</a></p>
+            <h3 class="under push-0"><a href="https://a1disposal.com/recycling-made-easy/trees-shrubbery-green-waste/" aria-label="Read more about Shrubbery recycling">Shrubbery recycling</a></h3>
+            <p class="push-0">I will come pick up your shrub and recycle it. Though why you’d want to get rid of a shrubbery I do not know. <a class="under" href="https://a1disposal.com/recycling-made-easy/trees-shrubbery-green-waste/" aria-label="Read more about Shrubbery recycling">Read more…</a></p>
           </li>
           <li class="push">
-            <h3 class="under push-0"><a href="#">Greens of any kind!</a></h3>
-            <p class="push-0">I now sell and plant more than just shrubs! Greens of any kind: lettuce, kale, onions, grasses, trees, etc. <a class="under" href="#" aria-label="Read more about Greens of any kind">Read&nbsp;more…</a></p>
+            <h3 class="under push-0"><a href="https://www.thespruce.com/list-of-shrubs-2132442" aria-label="Read more about Greens of any kind">Greens of any kind!</a></h3>
+            <p class="push-0">I now sell and plant more than just shrubs! Greens of any kind: lettuce, kale, onions, grasses, trees, etc. <a class="under" href="https://www.thespruce.com/list-of-shrubs-2132442" aria-label="Read more about Greens of any kind">Read more…</a></p>
           </li>
         </ol>
       </div>
-    </div>
+    </section>
 
-    <div class="contact pad-t pad-b" id="contact" tabindex="0" role="search">
+    <section class="contact pad-t pad-b" id="contact" tabindex="0" role="search">
       <div class="wrapper">
-        <h1 class="push-0 color-brand-dark gutter-1-2">Contact</h1>
+        <h2 class="push-0 color-brand-dark gutter-1-2">Contact</h2>
         <p class="mega max-length not-centered gutter-1-2">We want… a shrubbery!</p>
 
         <form class="grid" method="post" action="#">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">Your name</span>
-            <input>
+            <label class="push-1-8" for="name">Your name</label>
+            <input id="name" required>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">E-mail address</span>
-            <input>
+            <label class="push-1-8" for="email">E-mail address</label>
+            <input id="email" type="email" required>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">Type of shrubbery</span>
-            <select>
+            <label class="push-1-8" for="types">Type of shrubbery</label>
+            <select id="types">
               <option>Two-level shrubbery</option>
               <option>Small shrubbery</option>
               <option>Shrubbery with laurels</option>
@@ -160,14 +166,14 @@
           </div>
         </form>
       </div>
-    </div>
-  </div>
+    </section>
+  </main>
 
-  <div class="footer pad-t-1-2 pad-b-1-2" role="contentinfo">
+  <footer class="footer pad-t-1-2 pad-b-1-2" role="contentinfo">
     <div class="wrapper gutter-1-2">
       <small class="push-0 micro">Some quotes © <i>Monty Python and the Holy Grail</i>, 1975.</small>
     </div>
-  </div>
+  </footer>
 
 </body>
 </html>
