Add a small change to the code

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <nav class="nav" id="nav" tabindex="0" role="navigation">
       <div class="wrapper gutter-1-2">
         <ol class="mega list-group-inline push-0">
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#about">About</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#shrubs">Shrubs</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#prices">Prices</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#news">News</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#contact">Contact</a></li>
+          <li><a class="nlink ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#about">About</a></li>
+          <li><a class="nlink ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#shrubs">Shrubs</a></li>
+          <li><a class="nlink ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#prices">Prices</a></li>
+          <li><a class="nlink ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#news">News</a></li>
+          <li><a class="nlink ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#contact">Contact</a></li>
         </ol>
       </div>
     </nav>
@@ -83,7 +83,7 @@
         <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
-          <caption class="rando italic pad-t pad-b gutter-1-4">Prices for small, medium and large shrubberies.</caption>
+          <caption class="italic pad-t gutter-1-4">Prices for small, medium and large shrubberies.</caption>
           <thead>
             <tr>
               <th scope="col">&nbsp;</th>
